--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,11 @@
+# Force LF line endings for notebooks to avoid CRLF issues on Windows
 *.ipynb text eol=lf
+
+# Normalize Python scripts
+*.py text eol=lf
+
+# Normalize shell scripts
+*.sh text eol=lf
+
+# Handle Markdown
+*.md text eol=lf
